# proxy

./: .gitignore  PRODUCTION_READY_REPORT.md  README.md  SYSTEM_UNDERSTANDING.md  setup.sh
.github/workflows/: ci.yml
common/: observability.hpp  runtime_control.hpp
proxy/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  proxy.cpp  proxy.hpp
proxy/unitTest/configTest/: config.ini  configTest_testCases.cpp
proxy/unitTest/proxyTest/: proxy.cpp  proxy.hpp  proxyTest_testCases.cpp
scripts/: build-system.sh  realtime_visualizer.py  run-system.sh  visualize-system.sh
sim/: CMakeLists.txt  filehandling.cpp  filehandling.hpp  main.cpp  sim.cpp  sim.hpp
trgt/: CMakeLists.txt  filehandling.cpp  main.cpp  trgt.cpp  trgt.hpp
